--- a/newbie_union/static/css/style.css
+++ b/newbie_union/static/css/style.css
@@ -1,3 +1,7 @@
+.nav {
+    background-color: #172f52;
+}
+
 .author {
     margin-top: 50px;
     display: flex;
@@ -149,3 +153,4 @@ h2 {
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: black }
+}
