testing_mgt_git

--- a/newbie_union/templates/about/author.html
+++ b/newbie_union/templates/about/author.html
@@ -8,9 +8,8 @@
     <h2 class="typewriter">Junior progger</h2>
   </div>
   <p>
-    Тут я размещу информацию о себе используя свои умения верстать.
+    Тут я размещу информацию о себе.
     Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam, consequatur cumque ducimus est eveniet illum impedit incidunt inventore, laudantium nobis officia quam quia quis quos suscipit tenetur vitae? Praesentium.
   </p>
 </div>
 <div class="processing">
