--- a/newbie_union/templates/about/tech.html
+++ b/newbie_union/templates/about/tech.html
@@ -12,10 +12,19 @@
   <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
-        Python
+        href="{% url 'https://www.python.org/' %}" >Python 3</a>
       </li>
       <li class="list-group-item">
-        Django
+        Django 2.2
+      </li>
+      <li class="list-group-item">
+        Docker
+      </li>
+      <li class="list-group-item">
+        Nginx
+      </li>
+      <li class="list-group-item">
+        Postgres
       </li>
     </ul>
   </aside>
