--- a/newbie_union/templates/includes/footer.html
+++ b/newbie_union/templates/includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="page-footer font-small blue border-top footer-copyright text-center py-3"
-    <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>
+    <p>© {{ year }} Copyright <span style="color:red">Newbie</span>union</p>
   </div>
 </div>
 
