--- a/newbie_union/templates/includes/header.html
+++ b/newbie_union/templates/includes/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <a class="navbar-brand" href="{% url 'post:index' %}">
     <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-      <span style="color:red">Ya</span>tube
+      <span style="color:red">Newbie</span>union
     </a>
     {% with request.resolver_match.view_name as view_name %}
       <ul class="nav nav-pills">
