--- a/newbie_union/templates/about/tech.html
+++ b/newbie_union/templates/about/tech.html
@@ -12,19 +12,19 @@
   <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
-        href="{% url 'https://www.python.org/' %}" >Python 3</a>
+        <a href="https://www.python.org/">Python 3</a>
       </li>
       <li class="list-group-item">
-        Django 2.2
+        <a href="https://www.djangoproject.com/">Django 2.2</a>
       </li>
       <li class="list-group-item">
-        Docker
+        <a href="https://www.docker.com/">Docker</a>
       </li>
       <li class="list-group-item">
-        Nginx
+        <a href="https://nginx.org/ru/">Nginx</a>
       </li>
       <li class="list-group-item">
-        Postgres
+        <a href="https://www.postgresql.org/">Postgres</a>
       </li>
     </ul>
   </aside>
